Added the Final things of 1.7.0 (#102)
## Description
Added various things that finalize the 1.7.0 release

## Changes
- **Change 1**: Added Qodana Code Review
- **Change 2**: Changed `Item` to `List<Item>` in ITamableEntity to
allow more then 1 Taming Item being set at the same time.
- **Change 3**: Added a Method for BlueLib ResourceLocations
- **Change 4:** Small Cleanup of Comments and Code

## Type of Change
- [ ] Bug fix
- [x] New feature
- [x] Cleanup
- [ ] Breaking change
- [ ] Documentation update

## Checklist
- [x] My code follows the style guidelines of this project.
[Contributing](https://github.com/MeAlam1/BlueLib/blob/1.21/CONTRIBUTING.md)
- [x] I have performed a self-review of my own code.
- [x] I have commented my code following the guidelines.
[Contributing](https://github.com/MeAlam1/BlueLib/blob/1.21/CONTRIBUTING.md)
- [x] My changes generate no new warnings.

## Related Issues
#63